--- a/rep-go-web/src/view/users.html
+++ b/rep-go-web/src/view/users.html
@@ -1,5 +1,12 @@
 <h2>Users</h2>
 
+<form layout="row" data-ng-submit="vm.search(vm.name)">
+  <md-input-container flex>
+    <label for="search">Search</label>
+    <input id="search" type="text" data-ng-model="vm.name">
+  </md-input-container>
+</form>
+
 <md-whiteframe class="md-whiteframe-1dp" layout="row" layout-padding>
 
   <md-list flex data-ng-init="vm.initList()">
@@ -14,3 +21,9 @@
   </md-list>
 
 </md-whiteframe>
+
+<div layout="row" layout-align="end center" flex>
+  <md-button class="md-fab" aria-label="Add User" data-ng-click="vm.newUser()">
+    <md-icon md-svg-icon="content:add"></md-icon>
+  </md-button>
+</div>
